--- a/kUYFJhjb.html
+++ b/kUYFJhjb.html
@@ -62,7 +62,7 @@
     require(['vs/editor/editor.main'], function() {
       // monaco shit
       var editor = monaco.editor.create(document.getElementById('editor-container'), {
-        value: '--⭐ ui by vyn || inj by asyncdll || spl. thanks to IIlem6\n',
+        value: '--ui by vyn || inj by asyncdll\n',
         language: 'lua',
         theme: 'vs-dark'
       });
