--- a/kUYFJhjb.html
+++ b/kUYFJhjb.html
@@ -104,8 +104,8 @@
     <h2 class="title">SYLC</h2>
     <div id="editor-container"></div>
     <div class="button-container">
-      <button class="button" id="execute-button">►</button>
-      <button class="button clear-button" id="clear-button">⌫</button>
+      <button class="button" id="execute-button">&#9658;</button>
+      <button class="button clear-button" id="clear-button">&#9003;</button>
     </div>
   </div>
 </body>
