--- a/kUYFJhjb.html
+++ b/kUYFJhjb.html
@@ -64,7 +64,7 @@
     require(['vs/editor/editor.main'], function() {
       // monaco shit
       var editor = monaco.editor.create(document.getElementById('editor-container'), {
-        value: '--ui by vyn || inj by asyncdll\n',
+        value: '-- ✨ ui by vyn || inj by asyncdll\n',
         language: 'lua',
         theme: 'vs-dark'
       });
