--- a/kUYFJhjb.html
+++ b/kUYFJhjb.html
@@ -1,114 +1,114 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sylc</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #1c1d1f;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh; /* Full viewport height */
-    }
-    .container {
-      max-width: 600px;
-      width: 100%; /* Make sure the container does not exceed viewport width */
-      padding: 20px;
-      background-color: #242222;
-      border: 1px solid #DDDDDD;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    .title {
-      font-size: 24px;
-      font-weight: bold;
-      color: #ffffff;
-      margin: 0;
-      padding-bottom: 10px;
-    }
-    #editor-container {
-      width: 100%;
-      height: 200px;
-      border-radius: 10px;
-      background-color: #141313;
-      margin-bottom: 20px;
-    }
-    .button-container {
-      display: flex;
-      justify-content: flex-end;
-    }
-    .button {
-      background-color: #393a39;
-      color: #FFFFFF;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      margin-left: 10px;
-    }
-    .button:hover {
-      background-color: #2d2d2d;
-    }
-  </style>
-  <script src="https://unpkg.com/monaco-editor@latest/min/vs/loader.js"></script>
-  <script>
-    require.config({ paths: { 'vs': 'https://unpkg.com/monaco-editor@latest/min/vs' } });
-    require(['vs/editor/editor.main'], function() {
-      // monaco shit
-      var editor = monaco.editor.create(document.getElementById('editor-container'), {
-        value: '-- ✨ ui by vyn || inj by asyncdll\n',
-        language: 'lua',
-        theme: 'vs-dark'
-      });
-
-      // open ws
-      const socket = new WebSocket('ws://localhost:8050/ws');
-
-      // logs and other bullshit
-      socket.onopen = function(event) {
-        console.log('WebSocket connection opened.');
-      };
-
-      socket.onclose = function(event) {
-        console.log('WebSocket connection closed.');
-      };
-
-      socket.onerror = function(error) {
-        console.error('WebSocket error:', error);
-      };
-
-      socket.onmessage = function(event) {
-        console.log('Message from server:', event.data);
-      };
-
-      document.getElementById("execute-button").addEventListener("click", function() {
-        const code = editor.getValue();
-        console.log('Sending code to server:', code);  // log sending code so we know its working good
-        socket.send(code);
-      });
-
-      document.getElementById("clear-button").addEventListener("click", function() {
-        editor.setValue("");
-      });
-    });
-  </script>
-</head>
-<body>
-  <div class="container">
-    <h2 class="title">SYLC</h2>
-    <div id="editor-container"></div>
-    <div class="button-container">
-      <button class="button" id="execute-button">&#9658;</button>
-      <button class="button clear-button" id="clear-button">&#9003;</button>
-    </div>
-  </div>
-</body>
-</html>
+<!DOCTYPE html>&#13;
+<html>&#13;
+<head>&#13;
+&#32;&#32;<meta charset="&#85;&#84;&#70;&#45;&#56;">&#13;
+&#32;&#32;<meta name="&#118;&#105;&#101;&#119;&#112;&#111;&#114;&#116;" content="&#119;&#105;&#100;&#116;&#104;&#61;&#100;&#101;&#118;&#105;&#99;&#101;&#45;&#119;&#105;&#100;&#116;&#104;&#44;&#32;&#105;&#110;&#105;&#116;&#105;&#97;&#108;&#45;&#115;&#99;&#97;&#108;&#101;&#61;&#49;&#46;&#48;">&#13;
+&#32;&#32;<title>&#83;&#121;&#108;&#99;</title>&#13;
+&#32;&#32;<style>&#13;
+&#32;&#32;&#32;&#32;&#98;&#111;&#100;&#121;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#102;&#111;&#110;&#116;&#45;&#102;&#97;&#109;&#105;&#108;&#121;&#58;&#32;&#65;&#114;&#105;&#97;&#108;&#44;&#32;&#115;&#97;&#110;&#115;&#45;&#115;&#101;&#114;&#105;&#102;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#98;&#97;&#99;&#107;&#103;&#114;&#111;&#117;&#110;&#100;&#45;&#99;&#111;&#108;&#111;&#114;&#58;&#32;&#35;&#49;&#99;&#49;&#100;&#49;&#102;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#109;&#97;&#114;&#103;&#105;&#110;&#58;&#32;&#48;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#112;&#97;&#100;&#100;&#105;&#110;&#103;&#58;&#32;&#48;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#100;&#105;&#115;&#112;&#108;&#97;&#121;&#58;&#32;&#102;&#108;&#101;&#120;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#106;&#117;&#115;&#116;&#105;&#102;&#121;&#45;&#99;&#111;&#110;&#116;&#101;&#110;&#116;&#58;&#32;&#99;&#101;&#110;&#116;&#101;&#114;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#97;&#108;&#105;&#103;&#110;&#45;&#105;&#116;&#101;&#109;&#115;&#58;&#32;&#99;&#101;&#110;&#116;&#101;&#114;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#104;&#101;&#105;&#103;&#104;&#116;&#58;&#32;&#49;&#48;&#48;&#118;&#104;&#59;&#32;&#47;&#42;&#32;&#70;&#117;&#108;&#108;&#32;&#118;&#105;&#101;&#119;&#112;&#111;&#114;&#116;&#32;&#104;&#101;&#105;&#103;&#104;&#116;&#32;&#42;&#47;&#13;
+&#32;&#32;&#32;&#32;&#125;&#13;
+&#32;&#32;&#32;&#32;&#46;&#99;&#111;&#110;&#116;&#97;&#105;&#110;&#101;&#114;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#109;&#97;&#120;&#45;&#119;&#105;&#100;&#116;&#104;&#58;&#32;&#54;&#48;&#48;&#112;&#120;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#119;&#105;&#100;&#116;&#104;&#58;&#32;&#49;&#48;&#48;&#37;&#59;&#32;&#47;&#42;&#32;&#77;&#97;&#107;&#101;&#32;&#115;&#117;&#114;&#101;&#32;&#116;&#104;&#101;&#32;&#99;&#111;&#110;&#116;&#97;&#105;&#110;&#101;&#114;&#32;&#100;&#111;&#101;&#115;&#32;&#110;&#111;&#116;&#32;&#101;&#120;&#99;&#101;&#101;&#100;&#32;&#118;&#105;&#101;&#119;&#112;&#111;&#114;&#116;&#32;&#119;&#105;&#100;&#116;&#104;&#32;&#42;&#47;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#112;&#97;&#100;&#100;&#105;&#110;&#103;&#58;&#32;&#50;&#48;&#112;&#120;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#98;&#97;&#99;&#107;&#103;&#114;&#111;&#117;&#110;&#100;&#45;&#99;&#111;&#108;&#111;&#114;&#58;&#32;&#35;&#50;&#52;&#50;&#50;&#50;&#50;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#98;&#111;&#114;&#100;&#101;&#114;&#58;&#32;&#49;&#112;&#120;&#32;&#115;&#111;&#108;&#105;&#100;&#32;&#35;&#68;&#68;&#68;&#68;&#68;&#68;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#98;&#111;&#114;&#100;&#101;&#114;&#45;&#114;&#97;&#100;&#105;&#117;&#115;&#58;&#32;&#49;&#48;&#112;&#120;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#98;&#111;&#120;&#45;&#115;&#104;&#97;&#100;&#111;&#119;&#58;&#32;&#48;&#32;&#48;&#32;&#49;&#48;&#112;&#120;&#32;&#114;&#103;&#98;&#97;&#40;&#48;&#44;&#48;&#44;&#48;&#44;&#48;&#46;&#50;&#41;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#100;&#105;&#115;&#112;&#108;&#97;&#121;&#58;&#32;&#102;&#108;&#101;&#120;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#102;&#108;&#101;&#120;&#45;&#100;&#105;&#114;&#101;&#99;&#116;&#105;&#111;&#110;&#58;&#32;&#99;&#111;&#108;&#117;&#109;&#110;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#97;&#108;&#105;&#103;&#110;&#45;&#105;&#116;&#101;&#109;&#115;&#58;&#32;&#99;&#101;&#110;&#116;&#101;&#114;&#59;&#13;
+&#32;&#32;&#32;&#32;&#125;&#13;
+&#32;&#32;&#32;&#32;&#46;&#116;&#105;&#116;&#108;&#101;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#102;&#111;&#110;&#116;&#45;&#115;&#105;&#122;&#101;&#58;&#32;&#50;&#52;&#112;&#120;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#102;&#111;&#110;&#116;&#45;&#119;&#101;&#105;&#103;&#104;&#116;&#58;&#32;&#98;&#111;&#108;&#100;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#99;&#111;&#108;&#111;&#114;&#58;&#32;&#35;&#102;&#102;&#102;&#102;&#102;&#102;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#109;&#97;&#114;&#103;&#105;&#110;&#58;&#32;&#48;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#112;&#97;&#100;&#100;&#105;&#110;&#103;&#45;&#98;&#111;&#116;&#116;&#111;&#109;&#58;&#32;&#49;&#48;&#112;&#120;&#59;&#13;
+&#32;&#32;&#32;&#32;&#125;&#13;
+&#32;&#32;&#32;&#32;&#35;&#101;&#100;&#105;&#116;&#111;&#114;&#45;&#99;&#111;&#110;&#116;&#97;&#105;&#110;&#101;&#114;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#119;&#105;&#100;&#116;&#104;&#58;&#32;&#49;&#48;&#48;&#37;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#104;&#101;&#105;&#103;&#104;&#116;&#58;&#32;&#50;&#48;&#48;&#112;&#120;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#98;&#111;&#114;&#100;&#101;&#114;&#45;&#114;&#97;&#100;&#105;&#117;&#115;&#58;&#32;&#49;&#48;&#112;&#120;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#98;&#97;&#99;&#107;&#103;&#114;&#111;&#117;&#110;&#100;&#45;&#99;&#111;&#108;&#111;&#114;&#58;&#32;&#35;&#49;&#52;&#49;&#51;&#49;&#51;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#109;&#97;&#114;&#103;&#105;&#110;&#45;&#98;&#111;&#116;&#116;&#111;&#109;&#58;&#32;&#50;&#48;&#112;&#120;&#59;&#13;
+&#32;&#32;&#32;&#32;&#125;&#13;
+&#32;&#32;&#32;&#32;&#46;&#98;&#117;&#116;&#116;&#111;&#110;&#45;&#99;&#111;&#110;&#116;&#97;&#105;&#110;&#101;&#114;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#100;&#105;&#115;&#112;&#108;&#97;&#121;&#58;&#32;&#102;&#108;&#101;&#120;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#106;&#117;&#115;&#116;&#105;&#102;&#121;&#45;&#99;&#111;&#110;&#116;&#101;&#110;&#116;&#58;&#32;&#102;&#108;&#101;&#120;&#45;&#101;&#110;&#100;&#59;&#13;
+&#32;&#32;&#32;&#32;&#125;&#13;
+&#32;&#32;&#32;&#32;&#46;&#98;&#117;&#116;&#116;&#111;&#110;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#98;&#97;&#99;&#107;&#103;&#114;&#111;&#117;&#110;&#100;&#45;&#99;&#111;&#108;&#111;&#114;&#58;&#32;&#35;&#51;&#57;&#51;&#97;&#51;&#57;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#99;&#111;&#108;&#111;&#114;&#58;&#32;&#35;&#70;&#70;&#70;&#70;&#70;&#70;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#112;&#97;&#100;&#100;&#105;&#110;&#103;&#58;&#32;&#49;&#48;&#112;&#120;&#32;&#50;&#48;&#112;&#120;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#98;&#111;&#114;&#100;&#101;&#114;&#58;&#32;&#110;&#111;&#110;&#101;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#98;&#111;&#114;&#100;&#101;&#114;&#45;&#114;&#97;&#100;&#105;&#117;&#115;&#58;&#32;&#49;&#48;&#112;&#120;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#99;&#117;&#114;&#115;&#111;&#114;&#58;&#32;&#112;&#111;&#105;&#110;&#116;&#101;&#114;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#109;&#97;&#114;&#103;&#105;&#110;&#45;&#108;&#101;&#102;&#116;&#58;&#32;&#49;&#48;&#112;&#120;&#59;&#13;
+&#32;&#32;&#32;&#32;&#125;&#13;
+&#32;&#32;&#32;&#32;&#46;&#98;&#117;&#116;&#116;&#111;&#110;&#58;&#104;&#111;&#118;&#101;&#114;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#98;&#97;&#99;&#107;&#103;&#114;&#111;&#117;&#110;&#100;&#45;&#99;&#111;&#108;&#111;&#114;&#58;&#32;&#35;&#50;&#100;&#50;&#100;&#50;&#100;&#59;&#13;
+&#32;&#32;&#32;&#32;&#125;&#13;
+&#32;&#32;</style>&#13;
+&#32;&#32;<script src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#117;&#110;&#112;&#107;&#103;&#46;&#99;&#111;&#109;&#47;&#109;&#111;&#110;&#97;&#99;&#111;&#45;&#101;&#100;&#105;&#116;&#111;&#114;&#64;&#108;&#97;&#116;&#101;&#115;&#116;&#47;&#109;&#105;&#110;&#47;&#118;&#115;&#47;&#108;&#111;&#97;&#100;&#101;&#114;&#46;&#106;&#115;"></script>&#13;
+&#32;&#32;<script>&#13;
+&#32;&#32;&#32;&#32;&#114;&#101;&#113;&#117;&#105;&#114;&#101;&#46;&#99;&#111;&#110;&#102;&#105;&#103;&#40;&#123;&#32;&#112;&#97;&#116;&#104;&#115;&#58;&#32;&#123;&#32;&#39;&#118;&#115;&#39;&#58;&#32;&#39;&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#117;&#110;&#112;&#107;&#103;&#46;&#99;&#111;&#109;&#47;&#109;&#111;&#110;&#97;&#99;&#111;&#45;&#101;&#100;&#105;&#116;&#111;&#114;&#64;&#108;&#97;&#116;&#101;&#115;&#116;&#47;&#109;&#105;&#110;&#47;&#118;&#115;&#39;&#32;&#125;&#32;&#125;&#41;&#59;&#13;
+&#32;&#32;&#32;&#32;&#114;&#101;&#113;&#117;&#105;&#114;&#101;&#40;&#91;&#39;&#118;&#115;&#47;&#101;&#100;&#105;&#116;&#111;&#114;&#47;&#101;&#100;&#105;&#116;&#111;&#114;&#46;&#109;&#97;&#105;&#110;&#39;&#93;&#44;&#32;&#102;&#117;&#110;&#99;&#116;&#105;&#111;&#110;&#40;&#41;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#47;&#47;&#32;&#109;&#111;&#110;&#97;&#99;&#111;&#32;&#115;&#104;&#105;&#116;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#118;&#97;&#114;&#32;&#101;&#100;&#105;&#116;&#111;&#114;&#32;&#61;&#32;&#109;&#111;&#110;&#97;&#99;&#111;&#46;&#101;&#100;&#105;&#116;&#111;&#114;&#46;&#99;&#114;&#101;&#97;&#116;&#101;&#40;&#100;&#111;&#99;&#117;&#109;&#101;&#110;&#116;&#46;&#103;&#101;&#116;&#69;&#108;&#101;&#109;&#101;&#110;&#116;&#66;&#121;&#73;&#100;&#40;&#39;&#101;&#100;&#105;&#116;&#111;&#114;&#45;&#99;&#111;&#110;&#116;&#97;&#105;&#110;&#101;&#114;&#39;&#41;&#44;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#118;&#97;&#108;&#117;&#101;&#58;&#32;&#39;&#45;&#45;&#32;&#226;&#156;&#168;&#32;&#117;&#105;&#32;&#98;&#121;&#32;&#118;&#121;&#110;&#32;&#124;&#124;&#32;&#105;&#110;&#106;&#32;&#98;&#121;&#32;&#97;&#115;&#121;&#110;&#99;&#100;&#108;&#108;&#92;&#110;&#39;&#44;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#108;&#97;&#110;&#103;&#117;&#97;&#103;&#101;&#58;&#32;&#39;&#108;&#117;&#97;&#39;&#44;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#116;&#104;&#101;&#109;&#101;&#58;&#32;&#39;&#118;&#115;&#45;&#100;&#97;&#114;&#107;&#39;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#125;&#41;&#59;&#13;
+&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#47;&#47;&#32;&#111;&#112;&#101;&#110;&#32;&#119;&#115;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#99;&#111;&#110;&#115;&#116;&#32;&#115;&#111;&#99;&#107;&#101;&#116;&#32;&#61;&#32;&#110;&#101;&#119;&#32;&#87;&#101;&#98;&#83;&#111;&#99;&#107;&#101;&#116;&#40;&#39;&#119;&#115;&#58;&#47;&#47;&#108;&#111;&#99;&#97;&#108;&#104;&#111;&#115;&#116;&#58;&#56;&#48;&#53;&#48;&#47;&#119;&#115;&#39;&#41;&#59;&#13;
+&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#47;&#47;&#32;&#108;&#111;&#103;&#115;&#32;&#97;&#110;&#100;&#32;&#111;&#116;&#104;&#101;&#114;&#32;&#98;&#117;&#108;&#108;&#115;&#104;&#105;&#116;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#115;&#111;&#99;&#107;&#101;&#116;&#46;&#111;&#110;&#111;&#112;&#101;&#110;&#32;&#61;&#32;&#102;&#117;&#110;&#99;&#116;&#105;&#111;&#110;&#40;&#101;&#118;&#101;&#110;&#116;&#41;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#99;&#111;&#110;&#115;&#111;&#108;&#101;&#46;&#108;&#111;&#103;&#40;&#39;&#87;&#101;&#98;&#83;&#111;&#99;&#107;&#101;&#116;&#32;&#99;&#111;&#110;&#110;&#101;&#99;&#116;&#105;&#111;&#110;&#32;&#111;&#112;&#101;&#110;&#101;&#100;&#46;&#39;&#41;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#125;&#59;&#13;
+&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#115;&#111;&#99;&#107;&#101;&#116;&#46;&#111;&#110;&#99;&#108;&#111;&#115;&#101;&#32;&#61;&#32;&#102;&#117;&#110;&#99;&#116;&#105;&#111;&#110;&#40;&#101;&#118;&#101;&#110;&#116;&#41;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#99;&#111;&#110;&#115;&#111;&#108;&#101;&#46;&#108;&#111;&#103;&#40;&#39;&#87;&#101;&#98;&#83;&#111;&#99;&#107;&#101;&#116;&#32;&#99;&#111;&#110;&#110;&#101;&#99;&#116;&#105;&#111;&#110;&#32;&#99;&#108;&#111;&#115;&#101;&#100;&#46;&#39;&#41;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#125;&#59;&#13;
+&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#115;&#111;&#99;&#107;&#101;&#116;&#46;&#111;&#110;&#101;&#114;&#114;&#111;&#114;&#32;&#61;&#32;&#102;&#117;&#110;&#99;&#116;&#105;&#111;&#110;&#40;&#101;&#114;&#114;&#111;&#114;&#41;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#99;&#111;&#110;&#115;&#111;&#108;&#101;&#46;&#101;&#114;&#114;&#111;&#114;&#40;&#39;&#87;&#101;&#98;&#83;&#111;&#99;&#107;&#101;&#116;&#32;&#101;&#114;&#114;&#111;&#114;&#58;&#39;&#44;&#32;&#101;&#114;&#114;&#111;&#114;&#41;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#125;&#59;&#13;
+&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#115;&#111;&#99;&#107;&#101;&#116;&#46;&#111;&#110;&#109;&#101;&#115;&#115;&#97;&#103;&#101;&#32;&#61;&#32;&#102;&#117;&#110;&#99;&#116;&#105;&#111;&#110;&#40;&#101;&#118;&#101;&#110;&#116;&#41;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#99;&#111;&#110;&#115;&#111;&#108;&#101;&#46;&#108;&#111;&#103;&#40;&#39;&#77;&#101;&#115;&#115;&#97;&#103;&#101;&#32;&#102;&#114;&#111;&#109;&#32;&#115;&#101;&#114;&#118;&#101;&#114;&#58;&#39;&#44;&#32;&#101;&#118;&#101;&#110;&#116;&#46;&#100;&#97;&#116;&#97;&#41;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#125;&#59;&#13;
+&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#100;&#111;&#99;&#117;&#109;&#101;&#110;&#116;&#46;&#103;&#101;&#116;&#69;&#108;&#101;&#109;&#101;&#110;&#116;&#66;&#121;&#73;&#100;&#40;&#34;&#101;&#120;&#101;&#99;&#117;&#116;&#101;&#45;&#98;&#117;&#116;&#116;&#111;&#110;&#34;&#41;&#46;&#97;&#100;&#100;&#69;&#118;&#101;&#110;&#116;&#76;&#105;&#115;&#116;&#101;&#110;&#101;&#114;&#40;&#34;&#99;&#108;&#105;&#99;&#107;&#34;&#44;&#32;&#102;&#117;&#110;&#99;&#116;&#105;&#111;&#110;&#40;&#41;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#99;&#111;&#110;&#115;&#116;&#32;&#99;&#111;&#100;&#101;&#32;&#61;&#32;&#101;&#100;&#105;&#116;&#111;&#114;&#46;&#103;&#101;&#116;&#86;&#97;&#108;&#117;&#101;&#40;&#41;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#99;&#111;&#110;&#115;&#111;&#108;&#101;&#46;&#108;&#111;&#103;&#40;&#39;&#83;&#101;&#110;&#100;&#105;&#110;&#103;&#32;&#99;&#111;&#100;&#101;&#32;&#116;&#111;&#32;&#115;&#101;&#114;&#118;&#101;&#114;&#58;&#39;&#44;&#32;&#99;&#111;&#100;&#101;&#41;&#59;&#32;&#32;&#47;&#47;&#32;&#108;&#111;&#103;&#32;&#115;&#101;&#110;&#100;&#105;&#110;&#103;&#32;&#99;&#111;&#100;&#101;&#32;&#115;&#111;&#32;&#119;&#101;&#32;&#107;&#110;&#111;&#119;&#32;&#105;&#116;&#115;&#32;&#119;&#111;&#114;&#107;&#105;&#110;&#103;&#32;&#103;&#111;&#111;&#100;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#115;&#111;&#99;&#107;&#101;&#116;&#46;&#115;&#101;&#110;&#100;&#40;&#99;&#111;&#100;&#101;&#41;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#125;&#41;&#59;&#13;
+&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#100;&#111;&#99;&#117;&#109;&#101;&#110;&#116;&#46;&#103;&#101;&#116;&#69;&#108;&#101;&#109;&#101;&#110;&#116;&#66;&#121;&#73;&#100;&#40;&#34;&#99;&#108;&#101;&#97;&#114;&#45;&#98;&#117;&#116;&#116;&#111;&#110;&#34;&#41;&#46;&#97;&#100;&#100;&#69;&#118;&#101;&#110;&#116;&#76;&#105;&#115;&#116;&#101;&#110;&#101;&#114;&#40;&#34;&#99;&#108;&#105;&#99;&#107;&#34;&#44;&#32;&#102;&#117;&#110;&#99;&#116;&#105;&#111;&#110;&#40;&#41;&#32;&#123;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#32;&#101;&#100;&#105;&#116;&#111;&#114;&#46;&#115;&#101;&#116;&#86;&#97;&#108;&#117;&#101;&#40;&#34;&#34;&#41;&#59;&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;&#125;&#41;&#59;&#13;
+&#32;&#32;&#32;&#32;&#125;&#41;&#59;&#13;
+&#32;&#32;</script>&#13;
+</head>&#13;
+<body>&#13;
+&#32;&#32;<div class="&#99;&#111;&#110;&#116;&#97;&#105;&#110;&#101;&#114;">&#13;
+&#32;&#32;&#32;&#32;<h2 class="&#116;&#105;&#116;&#108;&#101;">&#83;&#89;&#76;&#67;</h2>&#13;
+&#32;&#32;&#32;&#32;<div id="&#101;&#100;&#105;&#116;&#111;&#114;&#45;&#99;&#111;&#110;&#116;&#97;&#105;&#110;&#101;&#114;"></div>&#13;
+&#32;&#32;&#32;&#32;<div class="&#98;&#117;&#116;&#116;&#111;&#110;&#45;&#99;&#111;&#110;&#116;&#97;&#105;&#110;&#101;&#114;">&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;<button class="&#98;&#117;&#116;&#116;&#111;&#110;" id="&#101;&#120;&#101;&#99;&#117;&#116;&#101;&#45;&#98;&#117;&#116;&#116;&#111;&#110;">&#38;&#35;&#57;&#54;&#53;&#56;&#59;</button>&#13;
+&#32;&#32;&#32;&#32;&#32;&#32;<button class="&#98;&#117;&#116;&#116;&#111;&#110;&#32;&#99;&#108;&#101;&#97;&#114;&#45;&#98;&#117;&#116;&#116;&#111;&#110;" id="&#99;&#108;&#101;&#97;&#114;&#45;&#98;&#117;&#116;&#116;&#111;&#110;">&#38;&#35;&#57;&#48;&#48;&#51;&#59;</button>&#13;
+&#32;&#32;&#32;&#32;</div>&#13;
+&#32;&#32;</div>&#13;
+</body>&#13;
+</html>&#13;
