--- a/kUYFJhjb.html
+++ b/kUYFJhjb.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="https://images-ext-1.discordapp.net/external/Z8fF9RbvNmMw3lbJVup48gifc94QBkXAqaP-k3NYKNg/%3Fsize%3D4096/https/cdn.discordapp.com/icons/1269994948397105216/0f38ddaf901f97c5205bdaee42a9e05f.png?quality=lossless">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sylc Execution</title>
+    <title>Karcus Execution</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.33.0/min/vs/editor/editor.main.min.css">
     <style>
         body {
@@ -114,7 +114,7 @@
             <!-- Editor Header -->
             <div class="editor-header">
                 <h2 id="connectionStatus">
-                    Sylc >> <span class="status-indicator">NOT CONNECTED</span> <<
+                    Karcus >> <span class="status-indicator">NOT CONNECTED</span> <<
                 </h2>
                 
                 <div class="button-group">
@@ -125,7 +125,7 @@
 
             <!-- Monaco Editor -->
             <div id="editor"></div>
-            <h6 style="opacity: 40%; user-select: none;">&copy; 2024 Sylc Softworks, LLC. All rights reserved</h6>
+            <h6 style="opacity: 40%; user-select: none;">&copy; 2024 Karcus Softworks, LLC. All rights reserved</h6>
         </div>
     </div>
 
