--- a/kUYFJhjb.html
+++ b/kUYFJhjb.html
@@ -136,7 +136,7 @@
         require(['vs/editor/editor.main'], function() {
             // Initialize the Monaco Editor
             var editor = monaco.editor.create(document.getElementById('editor'), {
-                value: "-- ( vyn, async\n",
+                value: "-- Welcome to the Karcus editor\n",
                 language: 'lua',
                 theme: 'vs-dark',
                 automaticLayout: true
