--- a/kUYFJhjb.html
+++ b/kUYFJhjb.html
@@ -138,41 +138,57 @@
             monaco.languages.register({ id: 'roblox-lua' });
             
             // Define syntax and highlighting rules for Roblox Exploit Lua
-           monaco.languages.setMonarchTokensProvider('roblox-lua', {
-    // Define the symbols to be recognized
-    symbols: /[=><!~?:&|+\-*\/\^%]+/,
+            monaco.languages.setMonarchTokensProvider('roblox-lua', {
+                symbols: /[=><!~?:&|+\-*\/\^%]+/,
 
-    tokenizer: {
-        root: [
-            [/\b(print|game|workspace|getgenv|getfenv|setfenv|hookfunction|newcclosure|firetouchinterest|firesignal|fireclickdetector)\b/, "keyword"],
-            [/[{}()\[\]]/, '@brackets'], // Recognize brackets
-            [/[<>](?!@symbols)/, '@brackets'], // Recognize angle brackets not used as symbols
-            [/@\w+/, 'namespace'],
-            [/[A-Z][\w\$]*/, 'type.identifier'], // Type names
-            [/\d+/, 'number'], // Numbers
-            [/"([^"\\]|\\.)*$/, 'string.invalid' ],  // Non-terminated string
-            [/"/,  { token: 'string.quote', bracket: '@open', next: '@string' } ],
-            [/[;,.]/, 'delimiter'], // Delimiters like commas, semicolons
-            [/\/\*/, 'comment', '@comment' ], // Comments
-            [/[ \t\r\n]+/, 'white'] // Whitespace
-        ],
+                tokenizer: {
+                    root: [
+                        [/\b(print|printidentity|game|workspace|getgenv|getfenv|setfenv|hookfunction|newcclosure|firetouchinterest|firesignal|fireclickdetector)\b/, "keyword"],
+                        [/[{}()\[\]]/, '@brackets'], 
+                        [/[<>](?!@symbols)/, '@brackets'], 
+                        [/@\w+/, 'namespace'],
+                        [/[A-Z][\w\$]*/, 'type.identifier'], 
+                        [/\d+/, 'number'], 
+                        [/"([^"\\]|\\.)*$/, 'string.invalid' ],  
+                        [/"/,  { token: 'string.quote', bracket: '@open', next: '@string' } ],
+                        [/[;,.]/, 'delimiter'], 
+                        [/\/\*/, 'comment', '@comment' ], 
+                        [/[ \t\r\n]+/, 'white'] 
+                    ],
 
-        // String handling
-        string: [
-            [/[^\\"]+/,  'string'],
-            [/\\./,      'string.escape.invalid'],
-            [/"/,        { token: 'string.quote', bracket: '@close', next: '@pop' } ]
-        ],
+                    string: [
+                        [/[^\\"]+/,  'string'],
+                        [/\\./,      'string.escape.invalid'],
+                        [/"/,        { token: 'string.quote', bracket: '@close', next: '@pop' } ]
+                    ],
 
-        // Comment handling
-        comment: [
-            [/[^*]+/, 'comment'],
-            [/\*\//, 'comment', '@pop'],
-            [/\*/, 'comment']
-        ]
-    }
-});
+                    comment: [
+                        [/[^*]+/, 'comment'],
+                        [/\*\//, 'comment', '@pop'],
+                        [/\*/, 'comment']
+                    ]
+                }
+            });
 
+            // Define a custom theme with a purple-black background and purple colors
+            monaco.editor.defineTheme('purple-theme', {
+                base: 'vs-dark',
+                inherit: true,
+                rules: [
+                    { token: 'keyword', foreground: 'C678DD' }, // Purple keywords
+                    { token: 'number', foreground: 'D19A66' }, // Orange numbers
+                    { token: 'string', foreground: '98C379' }, // Green strings
+                    { token: 'comment', foreground: '5C6370', fontStyle: 'italic' }, // Gray comments
+                    { token: 'type.identifier', foreground: 'E06C75' }, // Red type names
+                    { token: 'namespace', foreground: '61AFEF' }, // Blue namespaces
+                    { token: 'delimiter', foreground: 'ABB2BF' }, // Light gray delimiters
+                ],
+                colors: {
+                    'editor.background': '#2B0032', // Purple-black background
+                    'editor.lineHighlightBackground': '#3C0038', // Highlighted line background
+                    'editorCursor.foreground': '#C678DD', // Purple cursor
+                }
+            });
 
             // Register autocomplete suggestions
             monaco.languages.registerCompletionItemProvider('roblox-lua', {
@@ -199,110 +215,20 @@
                         {
                             label: 'hookfunction',
                             kind: monaco.languages.CompletionItemKind.Function,
-                            insertText: 'hookfunction(original, hook)',
+                            insertText: 'hookfunction(function)',
                             documentation: 'Hooks a function.'
-                        },
-                        {
-                            label: 'newcclosure',
-                            kind: monaco.languages.CompletionItemKind.Function,
-                            insertText: 'newcclosure(function() ... end)',
-                            documentation: 'Creates a new C closure.'
-                        },
-                        {
-                            label: 'firetouchinterest',
-                            kind: monaco.languages.CompletionItemKind.Function,
-                            insertText: 'firetouchinterest(part, target, action)',
-                            documentation: 'Fires a touch interest event.'
-                        },
-                        {
-                            label: 'firesignal',
-                            kind: monaco.languages.CompletionItemKind.Function,
-                            insertText: 'firesignal(signal)',
-                            documentation: 'Fires a Roblox signal.'
-                        },
-                        {
-                            label: 'fireclickdetector',
-                            kind: monaco.languages.CompletionItemKind.Function,
-                            insertText: 'fireclickdetector(clickdetector)',
-                            documentation: 'Fires a click detector.'
                         }
                     ];
                     return { suggestions: suggestions };
                 }
             });
 
-            // Initialize the editor
+            // Create the editor instance with the purple theme
             var editor = monaco.editor.create(document.getElementById('editor'), {
-                value: "-- Welcome to the Karcus editor\n",
+                value: "-- Karcus Execution Console\n\nprint('Hello world')",
                 language: 'roblox-lua',
-                theme: 'vs-dark',
-                automaticLayout: true
+                theme: 'purple-theme'
             });
-
-            // Initialize WebSocket connection
-            var ws;
-            var isConnected = false;
-            var statusIndicator = document.querySelector('#connectionStatus .status-indicator');
-
-            function updateConnectionStatus(connected) {
-                if (connected) {
-                    statusIndicator.textContent = 'READY';
-                    statusIndicator.style.color = 'green';
-                } else {
-                    statusIndicator.textContent = 'NOT CONNECTED';
-                    statusIndicator.style.color = 'red';
-                }
-            }
-
-            function connectWebSocket() {
-                ws = new WebSocket('ws://localhost:8050/ws');
-
-                ws.onopen = function() {
-                    console.log('WebSocket connection established.');
-                    isConnected = true;
-                    updateConnectionStatus(true);
-                };
-
-                ws.onclose = function(event) {
-                    console.warn('WebSocket connection closed:', event);
-                    isConnected = false;
-                    updateConnectionStatus(false);
-                };
-
-                ws.onerror = function(error) {
-                    console.error('WebSocket error:', error);
-                    isConnected = false;
-                    updateConnectionStatus(false);
-                };
-            }
-
-            // Connect WebSocket when the page loads
-            connectWebSocket();
-
-            // Sidebar button events
-            document.getElementById('reloadButton').onclick = function() {
-                location.reload(); // Reload the page
-            };
-
-            document.getElementById('popoutButton').onclick = function() {
-                window.open(window.location.href, '_blank', 'width=800,height=600'); // Open the same page in a new window
-            };
-
-            // Clear button event
-            document.getElementById('clearButton').onclick = function() {
-                editor.setValue(''); // Clear the editor content
-            };
-
-            // Execute button event
-            document.getElementById('executeButton').onclick = function() {
-                if (isConnected && ws.readyState === WebSocket.OPEN) {
-                    var code = editor.getValue();
-                    ws.send(code);
-                } else {
-                    console.error('WebSocket is not connected or not ready.');
-                    updateConnectionStatus(false);
-                }
-            };
         });
     </script>
 </body>
