--- a/ValiantRosplocoEditor.html
+++ b/ValiantRosplocoEditor.html
@@ -7150,7 +7150,7 @@
 
         editor = monaco.editor.create(document.getElementById("container"), {
           value:
-            "-- Monaco (Microsoft) and Rosploco (EthanMcBloxxer) licensed under the MIT License.  \n-- Has been edited by KanekiCat",
+            "local id = printidentity() \nif id < 3 then print('shitsploit detected!!') end",
           language: "lua",
           theme: "visualStudio-Dark",
           folding: true,
